made all elements have a flex shrink of 0 to prevent text being distorted when changing the size of the window

--- a/styles.css
+++ b/styles.css
@@ -195,3 +195,7 @@ ul{
     color: white;
     padding: 20px 0;
 }
+
+*{
+    flex-shrink: 0;
+}
